# support_orchestrator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_DEV_WORKFLOW.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/domain/: models.py
app/llm/: __init__.py  anthropic_provider.py  gemini_provider.py  mock_provider.py  openai_provider.py  provider.py  recording_provider.py
app/orchestration/: graph.py  state.py
app/orchestration/nodes/: __init__.py  _common.py  classifier.py  customer_response.py  escalation.py  extractor.py  internal_summary.py
app/prompts/: __init__.py  _sanitize.py  classify.py  customer_response.py  escalation.py  extract.py  internal_summary.py
app/utils/: logging.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ClassificationCard.tsx  CustomerResponseCard.tsx  ErrorBanner.tsx  EscalationCard.tsx  ExtractedInfoCard.tsx  HealthIndicator.tsx  InternalSummaryCard.tsx  MessageForm.tsx  ResultDisplay.tsx  TraceTable.test.tsx  TraceTable.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx
frontend/src/hooks/: useHealth.ts  useProcessSupport.ts
frontend/src/lib/: cn.ts  samples.ts
samples/outputs/: billing-question.json  critical-bug-deadline.json  feature-request-slack.json  howto-sip-trunk.json  multi-tenant-outage.json
scripts/: demo.py  eval.py
tests/: conftest.py  test_api.py  test_graph.py  test_nodes.py  test_routing.py  test_validation_retry.py
tests/fixtures/: eval_set.json  sample_messages.json
